# vega

./: .gitignore  Cargo.toml  Justfile  README.md
app/: Cargo.toml
app/src/: args.rs  main.rs  prelude.rs  tests.rs
app/src/builtin_commands/: default.rs  help.rs  init.rs  mod.rs  new.rs  vega_help.rs  vega_init.rs  vega_new.rs  vega_version.rs  version.rs
commands/run/: Cargo.toml
commands/run/src/: main.rs
commands/vega-repl/: Cargo.toml
commands/vega-repl/src/: main.rs
commands/vega_run/: Cargo.toml
commands/vega_run/src/: main.rs
crates/args/: Cargo.toml
crates/args/src/: flags.rs  flags2.rs  lib.rs  options.rs
crates/command-loader/: Cargo.toml
crates/command-loader/src/: lib.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: lib.rs  types.rs
crates/strings/: Cargo.toml
crates/strings/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: debugging.rs  errors.rs  lib.rs
examples/: macro_def.vega  patterns.vega
examples/data/: Vega.toml
examples/data/src/: main.vega
examples/functions/: Vega.toml
examples/functions/src/: main.vega
examples/hello-world/: Vega.toml
examples/hello-world/src/: main.vega
language/frontend/lexer/: Cargo.toml
language/frontend/lexer/src/: lib.rs
language/syntax/: Cargo.toml
language/syntax/src/: keywords.rs  lib.rs  operators.rs
src/: main.rs
