[workspace]
metadata = { name = "Vega" }
resolver = "3"
members = ["app", "crates/*", "commands/*"]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["valcubeto@proton.me"]
repository = "https://github.com/valcubeto/vega"
readme = "README.md"

[workspace.dependencies]
vega = { path = "app" }
terminal = { path = "crates/terminal" }
args = { path = "crates/args" }
command-loader = { path = "crates/command-loader" }
owo-colors = "4.3.0"
colorchoice = "1.0.4"
lazy-regex = "3.6.0"
toml_edit = "0.25.4+spec-1.1.0"
strings = { path = "crates/strings" }
